syntax = "proto2";

message RegisterSidechain {
    required bytes chainID = 1;
    required string name = 2;
    repeated RegisterSidechain_SidechainValidators sidechainValidators = 3;
    required uint64 sidechainCertificateThreshold = 4;
    }

message RegisterSidechain_SidechainValidators {
    required bytes blsKey = 1;
    required uint64 bftWeight = 2;
    }

